Comments and Readme
Added comments to each function and a more indepth description in the readme file.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
-        "rollee"
+        "goroutines",
+        "rollee",
+        "struct",
+        "synchronise",
+        "utilises",
+        "waitgroups"
     ]
 }
