--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
         "goroutines",
+        "initialvalue",
         "rollee",
         "struct",
         "synchronise",
         "utilises",
+        "vals",
+        "waitgroup",
         "waitgroups"
     ]
 }
